--- a/index.html
+++ b/index.html
@@ -17,35 +17,68 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body class="bg-slate-900 text-gray-300 font-sans">
+   <!-- Home -->
    <header class="section translate-y-0 scale-100 active px-[5%] md:px-[8%]" id="home">
-      <div class="h-screen grid md:grid-cols-2 gap-4">
-         <div class="flex justify-center items-center">
-            ini buat gambar
+      <div class="h-screen grid md:grid-cols-2 gap-0 md:gap-4">
+         <div class="flex justify-center md:items-center relative z-0">
+            <div class="absolute z-20 bg-gradient-to-tr from-neon-blue to-neon-pink w-[70%] h-[100%] md:h-[60%] hexagon-clip">
+            </div>
+            <img class="grayscale-[5] h-[100%] md:h-[70%] w-max absolute z-30 bottom-0 left-3" src="./src/images/profile.png" alt="profile">
          </div>
          <div class="flex flex-col justify-center gap-4 md:gap-6 px-4 order-first md:order-last">
-            <h1 class="font-bold text-[25px] md:text-5xl">I'm <span class="text-neon-blue/60">Irwan Ardiansyah</span> and I'm a <span class="text-neon-pink/70">Front End Developer</span></h1>
-            <p class="text-xs md:text-base text-gray-500 text-justify">Honesty and responsibility are my strengths, I graduated from information systems at BSI University and I am ready to work with you guys, please take a closer look at me.</p>
+            <h1 class="font-bold text-[25px] md:text-5xl">
+               I'm <span class="text-neon-blue/60">Irwan Ardiansyah</span> and I'm a <span class="text-neon-pink/70">Front End Developer</span>
+            </h1>
+            <p class="text-xs md:text-base text-gray-500 text-justify">
+               Honesty and responsibility are my strengths, I graduated from information systems at BSI University and I am ready to work with you guys, please take a closer look at me.
+            </p>
             <div class="flex justify-start pt-2 gap-4 md:gap-6">
-               <button class="neuro-effect px-3 py-2 md:px-5 md:py-3 rounded-md text-slate-300 font-normal md:font-medium text-xs md:text-base">Download CV <i class="fa-solid fa-arrow-down ml-2"></i></button>
-               <button class="neuro-effect px-3 py-2 md:px-5 md:py-3 rounded-md text-slate-300 font-normal md:font-medium text-xs md:text-base">Hire me <i class="fa-solid fa-paper-plane ml-2"></i></button>
+               <button class="neuro-effect px-3 py-2 md:px-5 md:py-3 rounded-md text-slate-300 font-normal md:font-medium text-xs md:text-base">
+                  Download CV <i class="fa-solid fa-arrow-down ml-2"></i>
+               </button>
+               <button class="neuro-effect px-3 py-2 md:px-5 md:py-3 rounded-md text-slate-300 font-normal md:font-medium text-xs md:text-base">
+                  Hire me <i class="fa-solid fa-paper-plane ml-2"></i>
+               </button>
             </div>
          </div>
       </div>
    </header>
+   <!-- End Home -->
    <main>
-      <section class="section h-screen translate-y-0 scale-100" id="about">
-         <h1 class="text-gray-100 font-bold">2</h1>
+
+      <!-- About -->
+      <section class="section h-screen translate-y-0 scale-100 px-[5%] md:px-[8%]" id="about">
+         <div class="title py-4">
+            <h2 class="text-content text-4xl md:text-6xl">About <span class="text-neon-blue">me</span>
+               <span class="text-bg text-5xl md:text-8xl">ability</span>
+            </h2>
+         </div>
       </section>
+      <!-- End About -->
+
+      <!-- Portfolio -->
       <section class="section h-screen translate-y-0 scale-100" id="portfolio">
-         <h1 class="text-gray-100 font-bold">3</h1>
+         <div class="title py-4">
+            <h2 class="text-content text-4xl md:text-6xl">My <span class="text-neon-blue">Portfolio</span>
+               <span class="text-bg text-5xl md:text-8xl">Project</span>
+            </h2>
+         </div>
       </section>
+      <!-- end Portfolio -->
+
+      <!-- Contact -->
       <section class="section h-screen translate-y-0 scale-100" id="contact">
-         <h1 class="text-gray-100 font-bold">4</h1>
+         <div class="title py-4">
+            <h2 class="text-content text-4xl md:text-6xl">Contact <span class="text-neon-blue">Me</span>
+               <span class="text-bg text-5xl md:text-8xl">Below</span>
+            </h2>
+         </div>
       </section>
+      <!-- End Contact -->
    </main>
 
 <!-- Navigation Controls -->
-   <div class="fixed inset-x-0 bottom-5 md:inset-y-0 md:right-5 flex justify-center md:items-end flex-row md:flex-col gap-4" id="control">
+   <div class="fixed inset-x-0 bottom-7 md:inset-y-0 md:right-5 flex justify-center md:items-end flex-row md:flex-col gap-4" id="control">
       <div class="rounded-[50%] w-12 h-12 bg-slate-900 neuro-effect flex justify-center items-center cursor-pointer active-btn" data-id="home">
          <i class="text-gray-300 fas fa-home"></i>
       </div>
