--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
          <div class="grid grid-flow-row pb-12">
             <h2 class="font-bold md:text-xl capitalize text-slate-50 mb-3">My Timeline</h2>
              <!-- My Time Line -->
-            <div class="grid md:grid-cols-2 gap-12 py-4">
+            <div class="grid md:grid-cols-2 gap-x-12 gap-y-0 py-4">
                <!-- left timeline -->
                <ol class="border-l-2 border-neon-blue">
                   <li>
@@ -187,8 +187,67 @@
                        <p class="text-sm text-gray-500 mt-2 mb-4">I start college at BSI University of Jakarta</p>
                      </div>
                    </li>
+
+                   <li>
+                     <div class="flex flex-start items-center">
+                       <div class="bg-neon-blue w-4 h-4 flex items-center justify-center rounded-full -ml-2 mr-3 -mt-2"></div>
+                       <h4 class="font-semibold text-base -mt-2 capitalize">Finished Dicoding elementary programming web class</h4>
+                     </div>
+                     <div class="ml-6 mb-6 pb-6">
+                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">23 September 2019</a>
+                       <p class="text-sm text-gray-500 mt-2 mb-4">I Finished my first course at Dicoding</p>
+                     </div>
+                   </li>
+
+                   <li>
+                     <div class="flex flex-start items-center">
+                       <div class="bg-neon-blue w-4 h-4 flex items-center justify-center rounded-full -ml-2 mr-3 -mt-2"></div>
+                       <h4 class="font-semibold text-base -mt-2 capitalize">Finished PREINEXUS test on Database System</h4>
+                     </div>
+                     <div class="ml-6 mb-6 pb-6">
+                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">01 December 2019</a>
+                       <p class="text-sm text-gray-500 mt-2 mb-4">When i was on college, i have Finished Database System test provide by IAII (Ikatan Ahli Informatika Indonesia)</p>
+                     </div>
+                   </li>
                </ol>
                <!-- end left timeline -->
+
+               <!-- Right timeline -->
+               <ol class="border-l-2 border-neon-blue">
+                  <li>
+                    <div class="flex flex-start items-center">
+                      <div class="bg-neon-blue w-4 h-4 flex items-center justify-center rounded-full -ml-2 mr-3 -mt-2"></div>
+                      <h4 class="font-semibold text-base -mt-2 capitalize">Internship Program at Digitiket.com as Front End Web Developer</h4>
+                    </div>
+                    <div class="ml-6 mb-6 pb-6">
+                      <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">01 October 2020 - 31 December 2020</a>
+                      <p class="text-sm text-gray-500 mt-2 mb-4">I work as Front End Web Developer, remote from home</p>
+                    </div>
+                  </li>
+
+                  <li>
+                     <div class="flex flex-start items-center">
+                       <div class="bg-neon-blue w-4 h-4 flex items-center justify-center rounded-full -ml-2 mr-3 -mt-2"></div>
+                       <h4 class="font-semibold text-base -mt-2 capitalize">Finished BWA Course at Fullstack Website Developer</h4>
+                     </div>
+                     <div class="ml-6 mb-6 pb-6">
+                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">30 August 2021</a>
+                       <p class="text-sm text-gray-500 mt-2 mb-4">I Finished my course on BuildWith Angga (BWA), I learn about UI/UX, Bootstrap, Laravel 7, and CSS Preprocessor</p>
+                     </div>
+                   </li>
+
+                   <li>
+                     <div class="flex flex-start items-center">
+                       <div class="bg-neon-blue w-4 h-4 flex items-center justify-center rounded-full -ml-2 mr-3 -mt-2"></div>
+                       <h4 class="font-semibold text-base -mt-2 capitalize">Finished my study at BSI University of Jakarta</h4>
+                     </div>
+                     <div class="ml-6 mb-6 pb-6">
+                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">31 August 2021</a>
+                       <p class="text-sm text-gray-500 mt-2 mb-4">I completed my Association Degree of Information Systems at Bina Sarana Informatika University Of Jakarta</p>
+                     </div>
+                   </li>
+               </ol>
+               <!-- end right timeline -->
             </div>
           <!-- end mytimeline -->
          </div>
