--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="about-skills grid grid-flow-row md:grid-cols-2 gap-x-12 gap-y-8 py-4">
                <!-- Stat Vue JS -->
                <div class="skill grid grid-flow-row gap-3 p-6 bg-slate-800 rounded-md">
-                  <p class="font-medium text-sm font-normal capitalize">Vue JS</p>
+                  <p class="font-medium text-sm capitalize">Vue JS</p>
                   <div class="w-full bg-slate-50 rounded-sm">
                      <div class="bg-gradient-to-r from-neon-blue to-neon-pink text-xs font-medium text-slate-50/90 text-center p-0.5 leading-none rounded-l-sm" style="width: 70%"> 70%</div>
                   </div>
@@ -122,7 +122,7 @@
 
                <!-- Stat tailwind -->
                <div class="skill grid grid-flow-row gap-3 p-6 bg-slate-800 rounded-md">
-                  <p class="font-medium text-sm font-normal capitalize">Tailwind CSS</p>
+                  <p class="font-medium text-sm capitalize">Tailwind CSS</p>
                   <div class="w-full bg-slate-50 rounded-sm">
                      <div class="bg-gradient-to-r from-neon-blue to-neon-pink text-xs font-medium text-slate-50/90 text-center p-0.5 leading-none rounded-l-sm" style="width: 65%"> 65%</div>
                   </div>
@@ -131,7 +131,7 @@
 
                <!-- Stat CSS -->
                <div class="skill grid grid-flow-row gap-3 p-6 bg-slate-800 rounded-md">
-                  <p class="font-medium text-sm font-normal capitalize">CSS3</p>
+                  <p class="font-medium text-sm capitalize">CSS3</p>
                   <div class="w-full bg-slate-50 rounded-sm">
                      <div class="bg-gradient-to-r from-neon-blue to-neon-pink text-xs font-medium text-slate-50/90 text-center p-0.5 leading-none rounded-l-sm" style="width: 80%"> 80%</div>
                   </div>
@@ -140,7 +140,7 @@
 
                <!-- Stat JS -->
                <div class="skill grid grid-flow-row gap-3 p-6 bg-slate-800 rounded-md">
-                  <p class="font-medium text-sm font-normal capitalize">Javascript</p>
+                  <p class="font-medium text-sm capitalize">Javascript</p>
                   <div class="w-full bg-slate-50 rounded-sm">
                      <div class="bg-gradient-to-r from-neon-blue to-neon-pink text-xs font-medium text-slate-50/90 text-center p-0.5 leading-none rounded-l-sm" style="width: 60%"> 60%</div>
                   </div>
@@ -149,7 +149,7 @@
 
                 <!-- Stat User Interface -->
                 <div class="skill grid grid-flow-row gap-3 p-6 bg-slate-800 rounded-md">
-                  <p class="font-medium text-sm font-normal capitalize">user interface</p>
+                  <p class="font-medium text-sm capitalize">user interface</p>
                   <div class="w-full bg-slate-50 rounded-sm">
                      <div class="bg-gradient-to-r from-neon-blue to-neon-pink text-xs font-medium text-slate-50/90 text-center p-0.5 leading-none rounded-l-sm" style="width: 70%"> 70%</div>
                   </div>
@@ -172,7 +172,7 @@
                       <h4 class="font-semibold text-base -mt-2 capitalize">Work at Nittoh Presisi Indonesia</h4>
                     </div>
                     <div class="ml-6 mb-6 pb-6">
-                      <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">April 2014 - April 2018</a>
+                      <a href="#!" class="hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">April 2014 - April 2018</a>
                       <p class="text-sm text-gray-500 mt-2 mb-4">I work as production operator for assembly division</p>
                     </div>
                   </li>
@@ -183,7 +183,7 @@
                        <h4 class="font-semibold text-base -mt-2 capitalize">College start and learning programming</h4>
                      </div>
                      <div class="ml-6 mb-6 pb-6">
-                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">September 2018</a>
+                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out">September 2018</a>
                        <p class="text-sm text-gray-500 mt-2 mb-4">I start college at BSI University of Jakarta</p>
                      </div>
                    </li>
@@ -194,7 +194,7 @@
                        <h4 class="font-semibold text-base -mt-2 capitalize">Finished Dicoding elementary programming web class</h4>
                      </div>
                      <div class="ml-6 mb-6 pb-6">
-                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">23 September 2019</a>
+                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out">23 September 2019</a>
                        <p class="text-sm text-gray-500 mt-2 mb-4">I Finished my first course at Dicoding</p>
                      </div>
                    </li>
@@ -205,7 +205,7 @@
                        <h4 class="font-semibold text-base -mt-2 capitalize">Finished PREINEXUS test on Database System</h4>
                      </div>
                      <div class="ml-6 mb-6 pb-6">
-                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">01 December 2019</a>
+                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out">01 December 2019</a>
                        <p class="text-sm text-gray-500 mt-2 mb-4">When i was on college, i have Finished Database System test provide by IAII (Ikatan Ahli Informatika Indonesia)</p>
                      </div>
                    </li>
@@ -220,7 +220,7 @@
                       <h4 class="font-semibold text-base -mt-2 capitalize">Internship Program at Digitiket.com as Front End Web Developer</h4>
                     </div>
                     <div class="ml-6 mb-6 pb-6">
-                      <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">01 October 2020 - 31 December 2020</a>
+                      <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out">01 October 2020 - 31 December 2020</a>
                       <p class="text-sm text-gray-500 mt-2 mb-4">I work as Front End Web Developer, remote from home</p>
                     </div>
                   </li>
@@ -231,7 +231,7 @@
                        <h4 class="font-semibold text-base -mt-2 capitalize">Finished BWA Course at Fullstack Website Developer</h4>
                      </div>
                      <div class="ml-6 mb-6 pb-6">
-                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">30 August 2021</a>
+                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out">30 August 2021</a>
                        <p class="text-sm text-gray-500 mt-2 mb-4">I Finished my course on BuildWith Angga (BWA), I learn about UI/UX, Bootstrap, Laravel 7, and CSS Preprocessor</p>
                      </div>
                    </li>
@@ -242,7 +242,7 @@
                        <h4 class="font-semibold text-base -mt-2 capitalize">Finished my study at BSI University of Jakarta</h4>
                      </div>
                      <div class="ml-6 mb-6 pb-6">
-                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">31 August 2021</a>
+                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out">31 August 2021</a>
                        <p class="text-sm text-gray-500 mt-2 mb-4">I completed my Association Degree of Information Systems at Bina Sarana Informatika University Of Jakarta</p>
                      </div>
                    </li>
@@ -257,12 +257,98 @@
       <!-- End About -->
 
       <!-- Portfolio -->
-      <section class="section h-screen translate-y-0 scale-100" id="portfolio">
+      <section class="section h-screen translate-y-0 scale-100 px-[5%] md:px-[8%]" id="portfolio">
          <div class="title py-4 mb-8">
             <h2 class="text-content text-4xl md:text-6xl">My <span class="text-neon-blue">Portfolio</span>
                <span class="text-bg text-5xl md:text-8xl">Project</span>
             </h2>
          </div>
+         <div class="py-12">
+            <p class="text-sm md:text-base text-gray-500 text-center">Here.. I put my project link, please look at the project and hire me on contact page !</p>
+         </div>
+         <!-- Portfolio Section -->
+         <div class="portfolio-section grid grid-flow-row md:grid-cols-3 gap-x-12 gap-y-6">
+            <!-- UI POrtfolio -->
+            <div class="portfolio">
+               <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
+                  <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
+                  <div class="absolute z-10 bg-neon-pink/70 w-full h-64 rounded-2xl opacity-0 hover:opacity-100 transition-all duration-1000 ease-in-out flex flex-col gap-1 items-center justify-center">
+                     <p class="text-lg md:text-xl font-bold">Project Source</p>
+                     <div class="grid grid-cols-2 md:gap-4 gap-3">
+                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                           <i class="fa-brands fa-github w-6 h-6 md:w-7 md:h-7"></i>
+                        </a>
+                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                           <i class="fa-solid fa-link w-6 h-6 md:w-7 md:h-7"></i>
+                        </a>
+                     </div>
+                  </div>
+               </div>
+               <h3 class="capitalized text-base font-normal py-2 px-1">UI Web Wedding Organizer</h3>
+            </div>
+            <!-- End UI Portfolio -->
+
+            <!-- Web Wedding Organizer -->
+            <div class="portfolio">
+               <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
+                  <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
+                  <div class="absolute z-10 bg-neon-pink/70 w-full h-64 rounded-2xl opacity-0 hover:opacity-100 transition-all duration-1000 ease-in-out flex flex-col gap-1 items-center justify-center">
+                     <p class="text-lg md:text-xl font-bold">Project Source</p>
+                     <div class="grid grid-cols-2 md:gap-4 gap-3">
+                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                           <i class="fa-brands fa-github w-6 h-6 md:w-7 md:h-7"></i>
+                        </a>
+                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                           <i class="fa-solid fa-link w-6 h-6 md:w-7 md:h-7"></i>
+                        </a>
+                     </div>
+                  </div>
+               </div>
+               <h3 class="capitalized text-base font-normal py-2 px-1">Wedding Organizer Vue Website</h3>
+            </div>
+            <!-- end Web Wedding Organizer -->
+
+            <!-- Interior Furniture WEbsite -->
+            <div class="portfolio">
+               <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
+                  <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
+                  <div class="absolute z-10 bg-neon-pink/70 w-full h-64 rounded-2xl opacity-0 hover:opacity-100 transition-all duration-1000 ease-in-out flex flex-col gap-1 items-center justify-center">
+                     <p class="text-lg md:text-xl font-bold">Project Source</p>
+                     <div class="grid grid-cols-2 md:gap-4 gap-3">
+                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                           <i class="fa-brands fa-github w-6 h-6 md:w-7 md:h-7"></i>
+                        </a>
+                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                           <i class="fa-solid fa-link w-6 h-6 md:w-7 md:h-7"></i>
+                        </a>
+                     </div>
+                  </div>
+               </div>
+               <h3 class="capitalized text-base font-normal py-2 px-1">Interior Furniture web Vue</h3>
+            </div>
+            <!-- End Interior Furniture WEbsite -->
+
+            <!-- SI RT Slicing HTML -->
+            <div class="portfolio">
+               <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
+                  <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
+                  <div class="absolute z-10 bg-neon-pink/70 w-full h-64 rounded-2xl opacity-0 hover:opacity-100 transition-all duration-1000 ease-in-out flex flex-col gap-1 items-center justify-center">
+                     <p class="text-lg md:text-xl font-bold">Project Source</p>
+                     <div class="grid grid-cols-2 md:gap-4 gap-3">
+                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                           <i class="fa-brands fa-github w-6 h-6 md:w-7 md:h-7"></i>
+                        </a>
+                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                           <i class="fa-solid fa-link w-6 h-6 md:w-7 md:h-7"></i>
+                        </a>
+                     </div>
+                  </div>
+               </div>
+               <h3 class="capitalized text-base font-normal py-2 px-1">SIRT Slicing HTML CSS</h3>
+            </div>
+            <!-- End SI RT Slicing HTML -->
+         </div>
+         <!-- End Portfolio Secton -->
       </section>
       <!-- end Portfolio -->
 
