--- a/index.html
+++ b/index.html
@@ -258,21 +258,26 @@
 
       <!-- Portfolio -->
       <section class="section h-screen translate-y-0 scale-100 px-[5%] md:px-[8%]" id="portfolio">
+
+         <!-- title -->
          <div class="title py-4 mb-8">
             <h2 class="text-content text-4xl md:text-6xl">My <span class="text-neon-blue">Portfolio</span>
                <span class="text-bg text-5xl md:text-8xl">Project</span>
             </h2>
          </div>
-         <div class="py-12">
+         <!-- end title -->
+
+         <div class="mb-5 md:mb-0 md:py-12">
             <p class="text-sm md:text-base text-gray-500 text-center">Here.. I put my project link, please look at the project and hire me on contact page !</p>
          </div>
+
          <!-- Portfolio Section -->
          <div class="portfolio-section grid grid-flow-row md:grid-cols-3 gap-x-12 gap-y-6">
             <!-- UI POrtfolio -->
             <div class="portfolio">
                <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
                   <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
-                  <div class="absolute z-10 bg-neon-pink/70 w-full h-64 rounded-2xl opacity-0 hover:opacity-100 transition-all duration-1000 ease-in-out flex flex-col gap-1 items-center justify-center">
+                  <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-1 items-center justify-center">
                      <p class="text-lg md:text-xl font-bold">Project Source</p>
                      <div class="grid grid-cols-2 md:gap-4 gap-3">
                         <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
@@ -292,7 +297,7 @@
             <div class="portfolio">
                <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
                   <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
-                  <div class="absolute z-10 bg-neon-pink/70 w-full h-64 rounded-2xl opacity-0 hover:opacity-100 transition-all duration-1000 ease-in-out flex flex-col gap-1 items-center justify-center">
+                  <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-1 items-center justify-center">
                      <p class="text-lg md:text-xl font-bold">Project Source</p>
                      <div class="grid grid-cols-2 md:gap-4 gap-3">
                         <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
@@ -312,7 +317,7 @@
             <div class="portfolio">
                <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
                   <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
-                  <div class="absolute z-10 bg-neon-pink/70 w-full h-64 rounded-2xl opacity-0 hover:opacity-100 transition-all duration-1000 ease-in-out flex flex-col gap-1 items-center justify-center">
+                  <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-1 items-center justify-center">
                      <p class="text-lg md:text-xl font-bold">Project Source</p>
                      <div class="grid grid-cols-2 md:gap-4 gap-3">
                         <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
@@ -332,7 +337,7 @@
             <div class="portfolio">
                <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
                   <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
-                  <div class="absolute z-10 bg-neon-pink/70 w-full h-64 rounded-2xl opacity-0 hover:opacity-100 transition-all duration-1000 ease-in-out flex flex-col gap-1 items-center justify-center">
+                  <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-1 items-center justify-center">
                      <p class="text-lg md:text-xl font-bold">Project Source</p>
                      <div class="grid grid-cols-2 md:gap-4 gap-3">
                         <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
